--- a/src/app/styles/navbar.css
+++ b/src/app/styles/navbar.css
@@ -3,7 +3,7 @@
   color: #ffffff;
   padding: 32px 0;
   width: 100%;
-  z-index: 90 !important;
+  position: relative;
 }
 
 .navbar-container {
@@ -33,12 +33,12 @@
   border-radius: 100px;
   cursor: pointer;
   z-index: 60 !important;
+  position: relative;
 }
 
 .navbar-right button:hover {
-  color: #00d1cc;
-  border-color: #00d1cc;
-  z-index: 90 !important;
+  background-color: #5543d1;
+  border-color: #5543d1;
 }
 
 @media screen and (max-width: 992px) {
