--- a/src/app/styles/workflow.css
+++ b/src/app/styles/workflow.css
@@ -37,19 +37,38 @@
 }
 
 .workflow-container button {
-  padding: 16px 32px;
+  width: 197px;
+  height: 60px;
   border: 1px solid #fff;
   color: #fff;
   border-radius: 100px;
   background-color: #5543d1;
   margin-top: 48px;
-  transition: all .3s;
+  transition: all 0.3s;
   cursor: pointer;
+  font-weight: 600;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 
-.workflow-container button:hover{
+.workflow-container button:hover {
+  background-color: #00d1cc;
   border-color: #00d1cc;
-  color: #00d1cc;
+  color: #fff;
+}
+
+.workflow-container button div {
+  border: 2px solid;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s;
 }
 
 @media screen and (max-width: 1200px) {
@@ -114,6 +133,9 @@
 
   .workflow-container button {
     margin-top: 28px;
+    font-size: 16px;
+    width: 180px;
+    height: 54px;
   }
 }
 
