--- a/src/app/styles/about.css
+++ b/src/app/styles/about.css
@@ -25,18 +25,37 @@
 }
 
 .about-top button {
-  padding: 16px 32px;
+  width: 197px;
+  height: 60px;
   border: 1px solid #00d1cc;
   color: #00d1cc;
+  font-weight: 600;
+  font-size: 18px;
   border-radius: 100px;
   background-color: #fff;
-  transition: all .3s;
+  transition: all 0.3s;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 
-.about-top button:hover{
-  border-color: #5543D1;
-  color: #5543D1;
+.about-top button:hover {
+  background-color: #00d1cc;
+  border-color: #00d1cc;
+  color: #fff;
+}
+
+.about-top button div {
+  border: 2px solid;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s;
 }
 
 .about-middle {
@@ -79,7 +98,7 @@
     padding: 72px 0;
   }
 
-  .about-container{
+  .about-container {
     max-width: 86%;
   }
 
@@ -118,9 +137,15 @@
     margin-bottom: 28px;
   }
 
-  .about-middle p{
+  .about-middle p {
     font-size: 14px;
     line-height: 20px;
+  }
+
+  .about-top button{
+    font-size: 16px;
+    width: 180px;
+    height: 54px;
   }
 }
 
