--- a/src/app/styles/feature.css
+++ b/src/app/styles/feature.css
@@ -7,7 +7,7 @@
   max-width: 81.94%;
   margin: 0 auto;
   display: flex;
-  gap: 20px;
+  gap: 9.15%;
 }
 
 .feature-left {
@@ -23,18 +23,37 @@
 }
 
 .feature-left button {
-  padding: 16px 32px;
+  width: 197px;
+  height: 60px;
   border: 1px solid #00d1cc;
   color: #00d1cc;
   border-radius: 100px;
   background-color: #fff;
   transition: all 0.3s;
   cursor: pointer;
+  font-weight: 600;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 
 .feature-left button:hover {
-  border-color: #5543d1;
-  color: #5543d1;
+  background-color: #00d1cc;
+  border-color: #00d1cc;
+  color: #fff;
+}
+
+.feature-left button div {
+  border: 2px solid;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s;
 }
 
 .feature-right-content {
@@ -107,6 +126,12 @@
     font-size: 44px;
     margin-bottom: 16px;
     line-height: 54px;
+  }
+
+  .feature-left button {
+    font-size: 16px;
+    width: 180px;
+    height: 54px;
   }
 }
 
