--- a/src/app/styles/footer.css
+++ b/src/app/styles/footer.css
@@ -49,6 +49,8 @@
   border-radius: 100px;
   border: none;
   outline: none;
+  font-size: 18px;
+  color: #4d505a;
 }
 
 .footer-top-right input::placeholder {
@@ -70,6 +72,7 @@
   line-height: 28px;
   color: #fff;
   transition: all 0.3s;
+  cursor: pointer;
 }
 
 .footer-top-right button:hover {
@@ -77,10 +80,10 @@
 }
 
 .footer-bottom {
-  padding: 88px 0;
+  padding: 88px 0 0 0;
   display: flex;
   gap: 21.27%;
-  border-bottom: 1px solid #4d505a;
+  margin-bottom: 40px;
 }
 
 .footer-bottom-left {
@@ -97,7 +100,6 @@
   font-size: 16px;
   line-height: 24px;
   color: #f9fafb;
-  margin-bottom: 40px;
 }
 
 .socmed-container {
@@ -139,6 +141,21 @@
   color: #00d1cc;
 }
 
+.footer-bottom-bottom {
+  border-bottom: 1px solid #4d505a;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 88px;
+}
+
+.footer-bottom-bottom p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  color: #9ca3af;
+}
+
 @media screen and (max-width: 1200px) {
   .footer {
     padding: 88px 0 54px 0;
@@ -160,7 +177,7 @@
 
   .footer-bottom {
     gap: 15%;
-    padding: 72px 0;
+    padding: 72px 0 0 0;
   }
 
   .footer-bottom-left {
@@ -169,6 +186,10 @@
 
   .footer-bottom-right {
     width: 55%;
+  }
+
+  .footer-bottom-bottom {
+    padding-bottom: 72px;
   }
 }
 
@@ -197,7 +218,7 @@
   .footer-bottom {
     flex-direction: column;
     gap: 28px;
-    padding: 54px 0;
+    padding: 54px 0 0 0;
   }
 
   .footer-bottom-left {
@@ -209,12 +230,12 @@
     width: 160px;
   }
 
-  .footer-bottom-left p {
-    margin-bottom: 20px;
-  }
-
   .footer-bottom-right {
     width: 100%;
+  }
+
+  .footer-bottom-bottom {
+    padding-bottom: 54px;
   }
 }
 
@@ -246,8 +267,8 @@
     font-size: 16px;
   }
 
-  .footer-bottom{
-    padding: 44px 0;
+  .footer-bottom {
+    padding: 44px 0 0 0;
   }
 
   .footer-bottom-left {
@@ -256,6 +277,16 @@
 
   .footer-bottom-left p,
   .footer-bottom-right div a {
+    font-size: 14px;
+  }
+
+  .footer-bottom-bottom {
+    padding-bottom: 44px;
+    flex-direction: column;
+    gap: 26px;
+  }
+
+  .footer-bottom-bottom p{
     font-size: 14px;
   }
 }
@@ -284,16 +315,20 @@
     font-size: 14px;
   }
 
-  .footer-bottom{
-    padding: 36px 0;
+  .footer-bottom {
+    padding: 36px 0 0 0;
   }
 
-  .footer-bottom-left{
+  .footer-bottom-left {
     width: 80%;
   }
 
   .footer-bottom-right {
     flex-direction: column;
     gap: 16px;
+  }
+
+  .footer-bottom-bottom {
+    padding-bottom: 36px;
   }
 }
