--- a/src/app/styles/hero.css
+++ b/src/app/styles/hero.css
@@ -22,6 +22,7 @@
   font-family: 'Inter', sans-serif;
   width: 63.73%;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .hero h1 {
@@ -30,7 +31,7 @@
   font-size: 72px;
   line-height: 82px;
   text-align: center;
-  width: 64.49%;
+  width: 70%;
   margin-bottom: 24px;
 }
 
